[metadata]
name = tmh
version = 0.0.17
author = Birger Moell
author_email = bmoell@kth.se
description = TMH
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/tmh/
project_urls =
    Bug Tracker = https://pypi.org/project/tmh/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# [options]
# package_dir =
#     = tmh
# packages = find:
# python_requires = >=3.6

# [options.packages.find]
# where = tmh